--- a/src/main/resources/templates/professores/new.html
+++ b/src/main/resources/templates/professores/new.html
@@ -15,22 +15,22 @@
     </div>
     <div class="container">
         <div class="row">
-            <form action="/professores" method="POST">
+            <form th:object="${professorDto}" action="/professores" method="POST">
                 <div class="mb-3">
                     <label class="form-label">Nome</label>
-                    <input class="form-control" type="text" name="nome">
-                    <div></div>
+                    <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{nome}">
+                    <div class="invalid-feedback" th:errors="*{nome}"></div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Salario</label>
-                    <input class="form-control" type="text" name="salario">
-                    <div></div>
+                    <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{salario}">
+                    <div class="invalid-feedback" th:errors="*{salario}"></div>
                 </div>
                 <div class="mb-3">
                     <label class="form-label">Status</label>
-                    <select class="form-select" name="status">
+                    <select class="form-select" th:field="*{status}">
 
-                        <option th:each="status : ${statusProfessor}"
+                        <option th:each="status : ${listaStatusProfessor}"
                         th:value="${status}" th:text="${status}"></option>
                     </select>
                 </div>
