--- a/src/main/resources/templates/professores/edit.html
+++ b/src/main/resources/templates/professores/edit.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragmentos :: head('Novo Professor')}"></head>
+<head th:replace="~{fragmentos :: head('Editar Professor #')}"></head>
 <body>
-<header th:replace="~{fragmentos :: header('Novo Professor')}"></header>
+<header th:replace="~{fragmentos :: header('Editar Professor #' + ${professorId})}"></header>
 <div class="container">
 
     <div class="container">
         <div class="row">
-            <form th:object="${professorDto}" action="/professores" method="POST">
+            <form th:object="${professorDto}" th:action="@{/professores/{professorId}(professorId= ${professorId})}" method="POST">
                 <div class="mb-3">
                     <label class="form-label">Nome</label>
                     <input class="form-control" th:errorclass="is-invalid" type="text" th:field="*{nome}">
