--- a/src/main/resources/templates/professores/index.html
+++ b/src/main/resources/templates/professores/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <title>Lista de Professores</title>
-</head>
+<head th:replace="~{fragmentos :: head('Lista de Professores')}"></head>
 <body>
+<header th:replace="~{fragmentos :: header('Lista de Professores')}"></header>
     <div class="container">
-        <div class="row">
-            <h1>Lista de Professores</h1>
-        </div>
+
         <div class="row">
             <div class="col-12">
                 <table class="table table-hover">
@@ -33,8 +25,8 @@
                             <td class="col-4" th:text="${professor.nome}">Nome do Professor</td>
                             <td class="col-2" th:text="${professor.salario}">Salario</td>
                             <td class="col-2" th:text="${professor.status}">Status</td>
-                            <td class="col-1"><a href="#">Detalhes</a></td>
-                            <td class="col-1"><a href="#">Editar</a></td>
+                            <td class="col-1"><a th:href="@{/professores/{professorId}(professorId = ${professor.id})}">Detalhes</a></td>
+                            <td class="col-1"><a th:href="@{/professores/{professorId}/edit(professorId = ${professor.id})}">Editar</a></td>
                             <td class="col-1"><a href="#">Deletar</a></td>
 
                         </tr>
