--- a/src/main/resources/templates/professores/index.html
+++ b/src/main/resources/templates/professores/index.html
@@ -3,7 +3,14 @@
 <head th:replace="~{fragmentos :: head('Lista de Professores')}"></head>
 <body>
 <header th:replace="~{fragmentos :: header('Lista de Professores')}"></header>
-    <div class="container">
+<div class="container">
+    <div class="col-12 mb-4">
+        <span th:styleappend="${(param.erro == null || param.mensagem == null) ? 'display: none;' : ''}"
+                th:classappend="${(param.erro != null && param.erro) ? 'error-message' : 'sucess-message'}" th:text="${param.mensagem != null ? param.mensagem : '' }">Message</span>
+    </div>
+</div>
+
+    <div class="container mt-4">
 
         <div class="row">
             <div class="col-12">
@@ -27,7 +34,7 @@
                             <td class="col-2" th:text="${professor.status}">Status</td>
                             <td class="col-1"><a th:href="@{/professores/{professorId}(professorId = ${professor.id})}">Detalhes</a></td>
                             <td class="col-1"><a th:href="@{/professores/{professorId}/edit(professorId = ${professor.id})}">Editar</a></td>
-                            <td class="col-1"><a href="#">Deletar</a></td>
+                            <td class="col-1"><a th:href="@{/professores/{professorId}/delete(professorId = ${professor.id})}">Deletar</a></td>
 
                         </tr>
 
